Updated season 6 with episodes images and added currently available copy text in header and about page All episode *.md files are set up S06E01 to S06E06 are set to "draft", so only S06 teaser is displayed

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,11 +1,11 @@
 <footer id="footer" class="footer">
     <div class="footer-tag">
-        <p>IRL is an original podcast from Firefox, the tech company that believes privacy isn’t a policy. It’s a right.</p>
+        <p>IRL is an original podcast from Mozilla, the non-profit behind Firefox.</p>
     </div>
 
     <div class="footer-primary">
         <ul class="footer-links">
-            <li class="footer-logo"><a href="https://www.mozilla.org/firefox/"><img src="/images/firefox-logo.png" srcset="/images/firefox-logo-high-res.png 2x" width="111" height="38"></a></li>
+            <li class="footer-logo"><a href="https://foundation.mozilla.org/"><img src="/images/moz-logo-wb-rgb-black.svg" width="111" height="32"></a></li>
             <li><a href="https://www.mozilla.org/privacy/">Privacy Notice</a></li>
             <li><a href="https://www.mozilla.org/privacy/websites/#cookies">Cookies</a></li>
             <li><a href="/ringtones/">Ringtones</a></li>
