--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -72,18 +72,18 @@
                                         <button class="mzp-c-menu-button-close" type="button" aria-controls="mzp-c-menu-panel-example">Close Contact menu</button>
                                         <div class="mzp-c-menu-panel-content">
                                             <section class="mzp-c-menu-item ">
-                                                <a class="mzp-c-menu-item-link" href="mailto:IRL-podcast@mozilla.com">
+                                                <a class="mzp-c-menu-item-link" href="mailto:internethealth@mozillafoundation.org">
                                                     <h4 class="mzp-c-menu-item-title">General</h4>
                                                     <p class="mzp-c-menu-item-desc">
-                                                    IRL-podcast@mozilla.com
+                                                    internethealth@mozillafoundation.org
                                                     </p>
                                                 </a>
                                             </section>
                                             <section class="mzp-c-menu-item">
-                                                <a class="mzp-c-menu-item-link" href="mailto:press@mozilla.com">
+                                                <a class="mzp-c-menu-item-link" href="mailto:tracy@mozillafoundation.org">
                                                     <h4 class="mzp-c-menu-item-title">Press</h4>
                                                     <p class="mzp-c-menu-item-desc">
-                                                    press@mozilla.com
+                                                    tracy@mozillafoundation.org
                                                     </p>
                                                 </a>
                                             </section>
