--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -2,18 +2,20 @@
     <div class="c-intro-main">
 
         <div class="c-intro-logo">
-            <a href="https://www.mozilla.org/firefox/"><img src="/images/firefox.png" alt="Firefox" width="95" height="30"></a>
+            <a href="https://foundation.mozilla.org/">
+                <img src="/images/moz-logo-wb-rgb.svg" alt="Mozilla" width="95" height="27">
+            </a>
         </div>
 
         <h1 class="c-intro-title">IRL: Online Life is Real Life</h1>
 
         <div class="c-intro-desc">
             <p>
-                Host Manoush Zomorodi shares real stories of life online and real talk about the future of the Web.
+                Host Bridget Todd shares real stories of life online and talks to the people building a healthier internet.
             </p>
 
             <p>
-                IRL is an original podcast from Firefox.
+                IRL is an original podcast from Mozilla, the non-profit behind Firefox.
             </p>
         </div>
 
