Updates header info Updated /about texts Removed ringtones page and linking Updated header contact info

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,15 +5,14 @@
 
     <div class="footer-primary">
         <ul class="footer-links">
-            <li class="footer-logo"><a href="https://foundation.mozilla.org/"><img src="/images/moz-logo-wb-rgb-black.svg" width="111" height="32"></a></li>
+            <li class="footer-logo"><a href="https://www.mozilla.org/"><img src="/images/moz-logo-wb-rgb-black.svg" width="111" height="32" alt="Mozilla"></a></li>
             <li><a href="https://www.mozilla.org/privacy/">Privacy Notice</a></li>
             <li><a href="https://www.mozilla.org/privacy/websites/#cookies">Cookies</a></li>
-            <li><a href="/ringtones/">Ringtones</a></li>
         </ul>
         <ul class="footer-social">
-            <li><a class="icon icon-twitter" href="https://twitter.com/firefox">Twitter</a></li>
-            <li><a class="icon icon-instagram" href="https://www.instagram.com/firefox/">Instagram</a></li>
+            <li><a class="icon icon-twitter" href="https://twitter.com/mozilla">Twitter</a></li>
+            <li><a class="icon icon-instagram" href="https://www.instagram.com/mozilla/">Instagram</a></li>
         </ul>
-        <p class="footer-legal">Unless otherwise indicated, IRL Podcast episodes are available from the Mozilla Corporation under the <a href="https://creativecommons.org/licenses/by-sa/3.0/us/" rel="external">Creative Commons Attribution Share-Alike 3.0</a> Unported license, or any later version.</p>
+        <p class="footer-legal">Unless otherwise indicated, IRL Podcast episodes are available from the Mozilla Corporation under the <a href="https://creativecommons.org/licenses/by-sa/4.0/" rel="nofollow">Creative Commons Attribution Share-Alike 4.0</a> Unported license, or any later version.</p>
     </div>
 </footer>
