--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -80,10 +80,10 @@
                                                 </a>
                                             </section>
                                             <section class="mzp-c-menu-item">
-                                                <a class="mzp-c-menu-item-link" href="mailto:tracy@mozillafoundation.org">
+                                                <a class="mzp-c-menu-item-link" href="https://foundation.mozilla.org/en/press-center/">
                                                     <h4 class="mzp-c-menu-item-title">Press</h4>
                                                     <p class="mzp-c-menu-item-desc">
-                                                    tracy@mozillafoundation.org
+                                                        Visit our Press Center
                                                     </p>
                                                 </a>
                                             </section>
