--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -2,7 +2,7 @@
     <div class="c-intro-main">
 
         <div class="c-intro-logo">
-            <a href="https://foundation.mozilla.org/">
+            <a href="https://www.mozilla.org/">
                 <img src="/images/moz-logo-wb-rgb.svg" alt="Mozilla" width="95" height="27">
             </a>
         </div>
@@ -11,7 +11,7 @@
 
         <div class="c-intro-desc">
             <p>
-                Host Bridget Todd shares real stories of life online and talks to the people building a healthier internet.
+                In Season 6, host Bridget Todd shares stories of people who make AI more trustworthy <i>in real life</i>.
             </p>
 
             <p>
@@ -20,7 +20,7 @@
         </div>
 
         <section class="c-intro-subscribe">
-            <strong>Subscribe:</strong>
+            <strong>Follow:</strong>
             {{ partial "subscribe-links.html" (dict "subscribeLinksID" "subscribe-links-primary") }}
         </section>
     </div>
