--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,7 +9,7 @@
                     <nav class="mzp-c-menu mzp-is-basic">
                         <ul class="mzp-c-menu-category-list">
                             <li class="mzp-c-menu-category mzp-has-drop-down mzp-js-expandable">
-                                <a class="mzp-c-menu-title" href="/" aria-haspopup="true" aria-controls="menu-episodes">Episodes</a>
+                                <a class="mzp-c-menu-title" href="#" aria-haspopup="true" aria-controls="menu-episodes">Episodes</a>
                                 <div class="mzp-c-menu-panel" id="menu-episodes">
                                     <div class="mzp-c-menu-panel-container">
                                         <button class="mzp-c-menu-button-close" type="button" aria-controls="mzp-c-menu-panel-example">Close Episodes menu</button>
@@ -54,6 +54,13 @@
                                                     <div class="mzp-c-menu-item ">
                                                         <a class="mzp-c-menu-item-link" href="/season6/">
                                                             <h4 class="mzp-c-menu-item-title">Season Six</h4>
+                                                        </a>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="mzp-c-menu-item ">
+                                                        <a class="mzp-c-menu-item-link" href="/season7/">
+                                                            <h4 class="mzp-c-menu-item-title">Season Seven</h4>
                                                         </a>
                                                     </div>
                                                 </li>
