--- a/layouts/partials/episode-module.html
+++ b/layouts/partials/episode-module.html
@@ -45,14 +45,16 @@
         <img src="/images/{{ .context.Scratch.Get "imagePath" }}" srcset="/images/{{ .context.Scratch.Get "imagePathHighRes" }} 2x" alt="">
     </div>
 
-    <div class="episode-player">
-        <div class="episode-player-wrapper">
-            <iframe title="Listen to {{ .context.Title }}." class="lazy-load" frameborder="0" height="183px" scrolling="no" seamless src="" data-src="{{ (.context.Scratch.Get "embedSrc") }}{{ .context.Params.embed }}" width="100%"></iframe>
-            <noscript>
-                <iframe title="Listen to {{ .context.Title }}." frameborder="0" height="183px" scrolling="no" seamless src="{{ (.context.Scratch.Get "embedSrc") }}{{ .context.Params.embed }}" width="100%"></iframe>
-            </noscript>
+    {{ if .context.Params.embed }}
+        <div class="episode-player">
+            <div class="episode-player-wrapper">
+                <iframe title="Listen to {{ .context.Title }}." class="lazy-load" frameborder="0" height="183px" scrolling="no" seamless src="" data-src="{{ (.context.Scratch.Get "embedSrc") }}{{ .context.Params.embed }}" width="100%"></iframe>
+                <noscript>
+                    <iframe title="Listen to {{ .context.Title }}." frameborder="0" height="183px" scrolling="no" seamless src="{{ (.context.Scratch.Get "embedSrc") }}{{ .context.Params.embed }}" width="100%"></iframe>
+                </noscript>
+            </div>
         </div>
-    </div>
+    {{ end }}
 
     <ul class="episode-actions">
         <li><button type="button" class="episode-subscribe mzp-c-button mzp-t-small mzp-t-product" data-subscribe-links="episode-{{ .context.Params.number }}-subscribe-links">Subscribe</button></li>
@@ -62,7 +64,9 @@
             <a class="episode-action icon icon-copylink" data-service="copylink" href="{{ .context.Permalink }}" data-link-type="social share" data-link-name="copylink" data-clipboard-text="{{ .context.Permalink }}">Copy Link</a>
             <div class="episode-copy-ok">URL copied to clipboard</div>
         </li>
-        <li><a class="episode-action icon icon-download" data-service="download" href="{{ .context.Params.mp3 }}" rel="external noopener noreferrer">Download MP3</a></li>
+        {{ if .context.Params.mp3 }}
+            <li><a class="episode-action icon icon-download" data-service="download" href="{{ .context.Params.mp3 }}" rel="external noopener noreferrer">Download MP3</a></li>
+        {{ end }}
     </ul>
 
     <div class="episode-description">
