--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -7,11 +7,11 @@
             </a>
         </div>
 
-        <h1 class="c-intro-title">IRL: Online Life is Real Life</h1>
+        <h1 class="c-intro-title">IRL: Online Life is Real Life S07</h1>
 
         <div class="c-intro-desc">
             <p>
-                In Season 6, host Bridget Todd shares stories of people who make AI more trustworthy <i>in real life</i>.
+                In Season 7, host Bridget Todd shares stories of people who make AI more trustworthy <i>in real life</i>.
             </p>
 
             <p>
