Removed newsletter from about page
Added shortcode for subscribe sharer
Added subscribe sharer to about page
added first batch of home bg images

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -58,6 +58,9 @@
             })();
         </script>
     {{ end }}
+
+    <script src="https://cdn.usefathom.com/script.js" data-site="HQNFRRHO" defer></script>
+
 </head>
 
 <body id="{{ block "bodyID" . }}home{{ end }}" class="mzp-t-firefox">
