--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -3,7 +3,7 @@
 
         <div class="c-intro-logo">
             <a href="https://www.mozilla.org/">
-                <img src="/images/moz-logo-wb-rgb.svg" alt="Mozilla" width="95" height="27">
+                <img src="/images/moz-logo-wb-rgb-black.svg" alt="Mozilla" width="95" height="27">
             </a>
         </div>
 
