--- a/src/scss/components/_subscribe.scss
+++ b/src/scss/components/_subscribe.scss
@@ -4,6 +4,10 @@
 
 @import '../includes/lib';
 
+.subscribe-links-wrap {
+  margin: 48px 0;
+}
+
 .subscribe-links {
     display: flex;
     flex-wrap: wrap;
