Removed GA, added Fathom as partialUpdated sharer to dark modeAdded open graph image
Added favicons
Updated home header images
Updated home intro text
Updated S07E01 text

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -32,8 +32,23 @@
     <meta property="og:description" content="{{ .Page.Params.ogDescription | default "In Season 6, host Bridget Todd shares stories of people who make AI more trustworthy in real life." }}">
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/images/favicon/favicon-180x180.png">
-    <link rel="icon" type="image/png" sizes="196x196" href="/images/favicon/favicon-196x196.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link rel="shortcut icon" href="/images/favicon/favicon.ico">
 
     <title>{{ .Page.Title | default .Site.Title }}</title>
@@ -48,7 +63,7 @@
     <script src="/js/{{ index .Site.Data.js.hash "pre-render-min.js" }}"></script>
 
     {{ if eq (getenv "HUGO_ENV") "production" }}
-        {{ partial "google-analytics.html" . }}
+        {{ partial "fathom-analytics.html" . }}
     {{ else }}
         <script>
             (function() {
@@ -58,8 +73,6 @@
             })();
         </script>
     {{ end }}
-
-    <script src="https://cdn.usefathom.com/script.js" data-site="HQNFRRHO" defer></script>
 
 </head>
 
