--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -7,15 +7,15 @@
             </a>
         </div>
 
-        <h1 class="c-intro-title">IRL: Online Life is Real Life S07</h1>
+        <h1 class="c-intro-title">IRL: Online Life is Real Life</h1>
 
         <div class="c-intro-desc">
             <p>
-                In Season 7, host Bridget Todd shares stories of people who make AI more trustworthy <i>in real life</i>.
+                How does artificial intelligence change when people — not profit — truly come first?
             </p>
 
             <p>
-                These five episodes double as the <a href="https://2022.internethealthreport.org">2022 Internet Health Report</a>. Go there for show notes, transcripts, and more.
+                Join IRL host Bridget Todd, as she meets people around the world building responsible alternatives to the tech that’s changing how we work, communicate, and even listen to music.
             </p>
 
             <p>
