--- a/layouts/partials/subscribe-links.html
+++ b/layouts/partials/subscribe-links.html
@@ -1,17 +1,14 @@
 <ul class="subscribe-links" data-episode-title="{{/* .title | default "" */}}" id="{{/* .subscribeLinksID | default "" */}}">
     <li>
-        <a href="https://geo.itunes.apple.com/podcast/us/id1247652431?mt=2&amp;at=1010lbVy&amp;ct=mozilla_{{ .itunesTracking | default "homepage" }}" rel="external" data-link-type="subscribe" data-service="iTunes" class="subscribe-link-apple"><img src="/images/subscribe-badge-apple.svg" alt="Subscribe on Apple Podcasts"></a>
+        <a href="https://geo.itunes.apple.com/podcast/us/id1247652431?mt=2&amp;at=1010lbVy&amp;ct=mozilla_{{ .itunesTracking | default "homepage" }}" rel="external" data-link-type="subscribe" data-service="iTunes" class="subscribe-link-apple"><img src="/images/subscribe-badge-apple-black.svg" alt="Subscribe on Apple Podcasts"></a>
     </li>
     <li>
-        <a href="https://www.google.com/podcasts?feed=aHR0cHM6Ly9mZWVkcy5tb3ppbGxhLXBvZGNhc3RzLm9yZy9pcmw" rel="external" data-link-type="subscribe" data-service="Google" class="subscribe-link-google"><img src="/images/subscribe-badge-google.svg" alt="Subscribe on Google Podcasts"></a>
+        <a href="https://open.spotify.com/show/0vT7LJMeVDxyQ2ZamHKu08" rel="external" data-link-type="subscribe" data-service="Spotify" class="subscribe-link-spotify"><img src="/images/subscribe-badge-spotify-black.svg" alt="Subscribe on Spotify"></a>
     </li>
     <li>
-        <a href="https://open.spotify.com/show/0vT7LJMeVDxyQ2ZamHKu08" rel="external" data-link-type="subscribe" data-service="Spotify" class="subscribe-link-spotify"><img src="/images/subscribe-badge-spotify.svg" alt="Subscribe on Spotify"></a>
+        <a href="https://www.google.com/podcasts?feed=aHR0cHM6Ly9mZWVkcy5tb3ppbGxhLXBvZGNhc3RzLm9yZy9pcmw" rel="external" data-link-type="subscribe" data-service="Google" class="subscribe-link-google"><img src="/images/subscribe-badge-google-black.svg" alt="Subscribe on Google Podcasts"></a>
     </li>
     <li>
-        <a href="https://play.radiopublic.com/irl-online-life-is-real-life-6Bv5Op?utm_source=Mozilla&amp;utm_medium=irl-website&amp;utm_campaign={{ .rpTracking | default "header-badge" }}" rel="external" data-link-type="subscribe" data-service="Radio Public" class="subscribe-link-radiopublic"><img src="/images/subscribe-badge-radiopublic.png" alt="Subscribe on RadioPublic"></a>
-    </li>
-    <li>
-        <a href="https://feeds.mozilla-podcasts.org/irl" data-link-type="subscribe" data-service="RSS"><img src="/images/subscribe-badge-rss.png" alt="Subscribe with RSS"></a>
+        <a href="https://feeds.mozilla-podcasts.org/irl" data-link-type="subscribe" data-service="RSS"><img src="/images/subscribe-badge-rss-black.svg" alt="Subscribe with RSS"></a>
     </li>
 </ul>
