--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -10,7 +10,7 @@
     padding: $layout-md $layout-xs $layout-sm;
 
     @media #{$mq-md} {
-        padding-top: $layout-xl;
+        padding-top: 72px;
     }
 }
 
