--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -15,11 +15,7 @@
             </p>
 
             <p>
-                Join IRL host Bridget Todd, as she meets people around the world building responsible alternatives to the tech that’s changing how we work, communicate, and even listen to music.
-            </p>
-
-            <p>
-                IRL is an original podcast from Mozilla, the non-profit behind Firefox.
+                Join Bridget Todd, as she meets people building responsible alternatives to the tech that’s changing how we work, communicate, and even listen to music.
             </p>
         </div>
 
