--- a/src/scss/irlpodcast.scss
+++ b/src/scss/irlpodcast.scss
@@ -77,6 +77,37 @@ $image-path: '/images/protocol';
     }
 }
 
+.awards {
+  .award-copy {
+    width: 100%;
+  }
+  .award-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    img {
+      max-width: 120px;
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  @media screen and (min-width: 448px) {
+    display: flex;
+    .award-copy {
+      width: 82%;
+      margin-right: .5rem;
+    }
+    .award-image {
+      max-width: none;
+      width: 18%;
+      display: block;
+    }
+  }
+
+}
+
+
 .svg-about-image img {
     display: block;
     margin: 10px auto 0;
