Changed og-image and og-description
Updated Home introtext

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -11,11 +11,7 @@
 
         <div class="c-intro-desc">
             <p>
-                How does artificial intelligence change when people — not profit — truly come first?
-            </p>
-
-            <p>
-                Join Bridget Todd, as she meets people building responsible alternatives to the tech that’s changing how we work, communicate, and even listen to music.
+                Mozilla’s multi-award winning podcast is back! In Season 7, Bridget Todd meets tech builders who put people over profit in artificial intelligence.
             </p>
         </div>
 
