Textformatting home intro

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -11,7 +11,7 @@
 
         <div class="c-intro-desc">
             <p>
-                Mozilla’s multi-award winning podcast is back! In Season 7, Bridget Todd meets tech builders who put people over profit in artificial intelligence.
+                Mozilla’s multi-award winning podcast is back! In Season 7, Bridget Todd meets tech builders who put <em>people over profit</em> in artificial intelligence.
             </p>
         </div>
 
