--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -98,6 +98,9 @@
                                     </div>
                                 </div>
                             </li>
+                            <li class="mzp-c-menu-category">
+                                <a class="mzp-c-menu-title" href="https://donor.mozilla.org/page/irl-podcast">Donate</a>
+                            </li>
                         </ul>
                     </nav>
         </div>
