Added Ep 1 (With AIs Wide Open) description
Added Ep 1/2 episode art
Added Ep 1 shownotes
Added Ep 1 transcript
Trailer description changes → shortened a little bit
Trailer transcript changes → speaker names added with bolded text
About page: new credits added, to be placed before Bridget’s bio
About page: Bridget name change h3_heading to bolded text
About page: CC license text added
Footer edit: repeat CC license text

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,6 +13,6 @@
             <li><a class="icon icon-twitter" href="https://twitter.com/mozilla">Twitter</a></li>
             <li><a class="icon icon-instagram" href="https://www.instagram.com/mozilla/">Instagram</a></li>
         </ul>
-        <p class="footer-legal">Unless otherwise indicated, IRL Podcast episodes are available from the Mozilla Corporation under the <a href="https://creativecommons.org/licenses/by-sa/4.0/" rel="nofollow">Creative Commons Attribution Share-Alike 4.0</a> Unported license, or any later version.</p>
+        <p class="footer-legal">IRL Podcast episodes are available under the <a href="https://creativecommons.org/licenses/by-sa/4.0/" rel="nofollow">Creative Commons Attribution Share-Alike 4.0</a> unported license, or any later version.</p>
     </div>
 </footer>
