--- a/src/scss/irlpodcast.scss
+++ b/src/scss/irlpodcast.scss
@@ -66,9 +66,14 @@ $image-path: '/images/protocol';
     margin-top: 40px;
 }
 
+.credits-title {
+  display: block;
+  margin-bottom: 10px;
+}
+
 .credits-image {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     min-width: 300px;
 
     @media #{$mq-md} {
