--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -99,7 +99,7 @@
                                 </div>
                             </li>
                             <li class="mzp-c-menu-category">
-                                <a class="mzp-c-menu-title" href="https://donor.mozilla.org/page/FUNWKPJMPBA?form=irl-podcast">Donate</a>
+                                <a class="mzp-c-menu-title" href="https://foundation.mozilla.org/?form=irl-podcast">Donate</a>
                             </li>
                         </ul>
                     </nav>
