--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,16 +3,18 @@
 {{ end }}
 
 {{ define "main" }}
-    <section id="episodes">
+<section id="episodes">
         <div class="l-content">
-            <h2 class="page-title">Season 7</h2>
+            <h2 class="page-title">Season 8</h2>
             {{- range first 1 (where .Data.Pages "Type" "eq" "episodes") -}}
-                {{/* The dot context below passes the entire episode object */}}
-                {{ partial "episode-module" (dict "context" . "single" "false") }}
+                {{ if eq (string .Params.season) "8" }}
+                    {{/* The dot context below passes the entire episode object */}}
+                    {{ partial "episode-module" (dict "context" . "single" "false") }}
+                {{ end }}
             {{- end -}}
             <ul class="episode-summary-list">
                 {{- range after 1 (where .Data.Pages "Type" "eq" "episodes") -}}
-                    {{ if eq (string .Params.season) "7" }}
+                    {{ if eq (string .Params.season) "8" }}
                         {{/* The dot context below passes the entire episode object */}}
                         {{ partial "episode-summary.html" . }}
                     {{ end }}
@@ -20,6 +22,21 @@
             </ul>
         </div>
     </section>
+   <section class="season-summaries">
+    <div class="l-content">
+        <h2 class="season-summary-title">Season 7</h2>
+        <ul class="episode-summary-list">
+            {{- range .Data.Pages -}}
+            {{ if eq .Type "episodes" }}
+            {{ if eq (string .Params.season) "7" }}
+            {{/* The dot context below passes the entire episode object */}}
+            {{ partial "episode-summary.html" . }}
+            {{ end }}
+            {{ end }}
+            {{- end -}}
+        </ul>
+    </div>
+</section>
 
     <section class="season-summaries">
         <div class="l-content">
