Add Season 8 complete infrastructure: episodes, layout, navigation, and clean up obsolete podcast buttons

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -64,6 +64,13 @@
                                                         </a>
                                                     </div>
                                                 </li>
+                                                <li>
+                                                     <div class="mzp-c-menu-item ">
+                                                         <a class="mzp-c-menu-item-link" href="/season8/">
+                                                            <h4 class="mzp-c-menu-item-title">Season Eight</h4>
+                                                         </a>
+                                                     </div>
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
